# home-mcu-control

./: .gitattributes  .gitignore  LICENSE  README.md
device-server/: CMakeLists.txt
device-server/device-server/device-server/: main.c
device-server/src/: DeviceProtocol.c  DeviceProtocol.h  DeviceProtocolConstants.h  DeviceRequest.h  DeviceServer.c  DeviceServer.h  MessageTypes.h  WebServer.c  WebServer.h  main.c
mcu/RgbLedControl/: RgbLedControl.ino
